Edit - <li><a href="..>О деревьях леса</a></li>

--- a/Store-Sale/store-sale.html
+++ b/Store-Sale/store-sale.html
@@ -20,7 +20,7 @@
         <ul>
           <li><a href="../Index/index.html">Главная</a></li>
           <li><a href="../TableContent/tablecontent.html">Природные характеристики</a>
-          <li><a href="../Flora/flora.html">О деревьях леса</li>
+          <li><a href="../Flora/flora.html">О деревьях леса</a></li>
           <li><a href="../Map/map.html">Карта лесов России</a></li>
 
           <li><a href="../Contacts/contacts.html">Контакты</a></li>
