--- a/Basket/basket.html
+++ b/Basket/basket.html
@@ -22,7 +22,7 @@
         <ul>
           <li><a href="../Index/index.html">Главная</a></li>
           <li><a href="../TableContent/tablecontent.html">Природные характеристики</a>
-          <li><a href="../Flora/flora.html">О деревьях леса</li>
+          <li><a href="../Flora/flora.html">О деревьях леса</a></li>
           <li><a href="../Map/map.html">Карта лесов России</a></li>
           <li><a href="../Store-Sale/store-sale.html">Саженцы деревьев</a></li>
           <li><a href="../Contacts/contacts.html">Контакты</a></li>
