--- a/Map/map.html
+++ b/Map/map.html
@@ -41,7 +41,8 @@
         src="https://pub.fgislk.gov.ru/map/?ysclid=m2ils7b4jh14288124"
         style="border:0;"
         width="100%" 
-        height="100%">
+        height="100%"
+        title="Карта погоды">
     </iframe>
     <p><br>
     <a href="https://pub.fgislk.gov.ru/map/?ysclid=m2ils7b4jh14288124" 
